Fix center searchbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="logo">
             <img src="googlelogo_color_272x92dp.png" alt="google-logo">
         </div>
-        <div class="searchbar">
+        <div class="searchbar centered">
             <div class="search_icon"></div>
             <input type="text">
         </div>
